Add command-line option --data for specifying data files
Signed-off-by: Jacky Boen <jacky@veand.co>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Jacky Boen <jacky@veand.co>"]
 
 [dependencies]
 actix-web = "0.7"
+clap = "2.32"
 futures = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
