--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Jacky Boen <jacky@veand.co>"]
 [dependencies]
 actix-web = "0.7"
 clap = "2.32"
+env_logger = "0.5"
 futures = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
